// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "02b5d35bbdc092",
  "11579ffe1df657",
  "05061d703d2e67",
  "1cac4adc38796d",
  "0bd5714f18016b",
  "0828648eea6c7c",
  "1be1e97716d45a",
  "00c4fbe3fb1ebf",
  "187cfead1e7d99",
  "15c13ccc939d15",
  "0d42b3efd43b61",
  "119a9074ce9922",
  "19713455b3b59f",
  "0e5e8cedf9788d",
  "167997fe3f05f3",
  "0434226ea55064",
  "0208e80ce6e2ac",
  "1b6c090966605c",
  "1f4561912eb198",
  "1d754ce959caed",
  "0913f954a03df2",
  "139795b842f4ef",
  "075552b8509654",
  "1b3e1590b08417",
  "17627475be6de3",
  "09280db555df54",
  "16081f079ebd4d",
  "1bf6146fe3e25a",
  "08652ca17d48ca",
  "12aca7d5f77283",
  "1ef3179ea1c805",
  "140cbd8ab2f281",
  "127f15db722d42",
  "16fd1c8ca3264d",
  "1317eb1b41fc70",
  "0f978cc4072454",
  "06cdbfcc5ca5ec",
  "0fd1a876a679b6",
  "09b21ca2c68621",
  "0ad660b762db0d",
  "11f1c039d7e5ff",
  "18f782ab2825f7",
  "1b950a86192ba4",
  "14f11b9bfff368",
  "0366b68bfb5ef8",
  "15e5e9c3f2d771",
  "0436046957a9f0",
  "06b8eed592a885",
  "0642ff8e61c9b7",
  "129c3ebf094446",
  "186dfe768b964b",
  "057685754a6a94",
  "12a5179602715c",
  "0a8166ef9de333",
  "0e5501cb17b94e",
  "068e19294c8731",
  "07e2fad091d1ea",
  "1cd78d7ef33725",
  "04792aab724ee1",
  "0fbda86f66562e",
  "0748d9ee86d812",
  "07349ed86d5e73",
  "0d38411bc5fdcb",
  "199a39e084b81c",
  "1f09dd30b55261",
  "0434df8563b998",
  "1301339f0563cf",
  "1bf8cfdd12f270",
  "19b84d4b2414c7",
  "0781a16ce6667d",
  "0d9df17b75a093",
  "13053cd8705917",
  "169c332f3c00db",
  "104424253e992e",
  "1039d2acb1dcbb",
  "12dbc6166aceca",
  "064a1201b6047b",
  "0edd890fa6be68",
  "12336f574c8c24",
  "19b1a53e967389",
  "1a16ec3c17b265",
  "01ab8f852dfd1f",
  "194790d3024f00",
  "164a70ccd14c14",
  "073afd2c621564",
  "17ed7728d9970a",
  "154a720b808935",
  "118ba2b2c15688",
  "0c29a3bc26fc89",
  "0089aca7933c92",
  "09620342a1ca8f",
  "1a005dfffdb65a",
  "13d311adf9bf0b",
  "12dbf48ae49bc1",
  "1eb3ce60e2fac6",
  "13d3ab71136f2b",
  "0d7d8eb6ea0429",
  "0f416de580e023",
  "1017c254c9f98e",
  "1db233ba555e11",
  "0e9f6ad5711a42",
  "1e21de17c8f354",
  "104817ac0beaac",
  "0842213c87d881",
  "15274cd88f7bd7",
  "18b0e4686f76d2",
  "0b8a240084f083",
  "1e709729b913dd",
  "03b527533dcb29",
  "0ca0469a72eb88",
  "04d7ec6d811017",
  "0c1ef56649ee4c",
  "01b51e1b3335bd",
  "0bb29a59708f8a",
  "0161cb2c398f09",
  "0240990101c420",
  "0f3aecf08253a3",
  "133cd45015bc92",
  "05dfa0b8427faf",
  "18fd4a54245bed",
  "1c87f92abbc471",
  "19da1d30063990",
  "0c8374f766e086",
  "1f59b4aefd769f",
  "03ec90a9212271",
  "1e887da4224cb4",
  "1765e189912ea7",
  "1e91165a54f9ef",
  "0f6d8350479e9f",
  "1b6bbdf0d830a5",
  "101a9e57186f1f",
  "174b0edd221ab3",
  "10550fd3dc7813",
  "10ca7793e6da07",
  "15d434d4788c36",
  "0511d4a1692a3f",
  "0180c6eaa79b9b",
  "0ef7f0cfd9875d",
  "0fe5ab753420e8",
  "1aef1bc9f159be",
  "0162882243de8b",
  "0249dc93e04195",
  "0fafa981e88f6e",
  "17289c66a62109",
  "0f41d30738589f",
  "1d872163db074d",
  "1e39e019bd6c6f",
  "01e497069910bc",
  "1c78be691b2b32",
  "0efe709191bd99",
  "1aefeddc0bb7ab",
  "18b8e62690031f",
  "122aa7603e105f",
  "1056c90127ce6f",
  "1d2eaf9a3ff23b",
  "0f86733aa5d8bc",
  "0bf945de55fce5",
  "1c824f4f4c5bbe",
  "1ca995a2179ad3",
  "01a01750be60ab",
  "16521fe8e7fcf4",
  "01da755978edb7",
  "02e3ebcb40dcbd",
  "1c693992e04e99",
  "02348699e21132",
  "1c8289a71bf515",
  "046bf9fd1ff126",
  "0394b3176ac297",
  "0490b6668024ce",
  "06ab8f24526c33",
  "09b151b510065a",
  "09e6da16659e9d",
  "069f82602525e9",
  "1c4bdf33fd03f7",
  "1c663fb07a45f9",
  "1402dc283ad975",
  "0244f4217fba47",
  "172a2bb7d30352",
  "1664b25e75d22b",
  "0d046db74ad89a",
  "0d65e67a10ee86",
  "1e43a3e16c54de",
  "1631d44e29be8f",
  "01db39719839a6",
  "067089fb37e038",
  "0526c3e248c604",
  "026ec8e6fd6afa",
  "1c5650aac273b5",
  "05a99542a5d88f",
  "114f36e1a273d3",
  "0120b2dd32442a",
  "13809285940c72",
  "1b17e448088c75",
  "1f99bee46e95b7",
  "08ccbf6b22f07b",
  "165cd03d68a49b",
  "1a72d4e1962cb5",
  "08c6c6e9442522",
  "07c4421ed916b5",
  "0e6cf1126fbf47",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "0d13895fe07237",
  "10cc0207f60151",
  "17cb30bcbeeb22",
  "135ffd3fb2a27a",
  "13a4596cefe1b0",
  "07f75578dc949e",
  "1be1e97716d45a",
  "15e086a63ac0a6",
  "187cfead1e7d99",
  "1c1e6bf58eb246",
  "0618a50e1ad39c",
  "0e899efcee38bd",
  "1332df69289549",
  "0907dbceac2057",
  "075858954c4961",
  "0156debd6e54ee",
  "0208e80ce6e2ac",
  "18a147c5f3cfaa",
  "1f63ca93c21067",
  "13a6091c2d737d",
  "14cbdbde1db520",
  "114fba02bd8094",
  "10ee4961980a49",
  "1ab9128d367901",
  "035288ed905508",
  "18ff3d50d37a60",
  "0b7f12c182b907",
  "08ef24b4cd3784",
  "024a95558baf74",
  "1a1e1a87ba2705",
  "1d4d6e40fb99a2",
  "1345ec3554fe6d",
  "06b8808dcce173",
  "03e726ff9a14e7",
  "14fbc91257c432",
  "0f978cc4072454",
  "11dd472c75bf0a",
  "0a9f7b5203d0bf",
  "0c857c7a9cd2f7",
  "11c8a4b21c7ee8",
  "1b38e08f9f6707",
  "1920056fe2d146",
  "12a6f158aab9b6",
  "15612826cc34e0",
  "1ca65b29f0596e",
  "0b378a8948bccb",
  "0425e3ca2a5744",
  "06b8eed592a885",
  "1d4c4f696e7664",
  "1ba04d5c8902cb",
  "10e83ed37f93ee",
  "057685754a6a94",
  "07c8a025229518",
  "0a8166ef9de333",
  "07d72cec649d08",
  "178fd11d09e4e1",
  "057532993d430c",
  "1cd78d7ef33725",
  "08933b57d4ca6d",
  "0d7105f173c97f",
  "025887f0c53b3c",
  "1d464ff13e4749",
  "134f63b9dde085",
  "199a39e084b81c",
  "12868976c59b07",
  "0434df8563b998",
  "146cf063edf06b",
  "1a26ffa753a155",
  "142649535e0a6c",
  "056327423dfffe",
  "073263aa4c4c15",
  "0beaa54ddcbdd1",
  "0202edb651dcd2",
  "06e543007a53a4",
  "1fa1041d714536",
  "1ed9d0388125cb",
  "070730bb0393b1",
  "1db430c1075f23",
  "0a7f1ddcb48c05",
  "0e66a79844d21c",
  "088c880a96dc5c",
  "01ab8f852dfd1f",
  "1225c47187f367",
  "1f32aca2a154dd",
  "090f16e9eed970",
  "06d10a5edff5db",
  "0754719d28c221",
  "01464e3d91abed",
  "19089702eb961f",
  "003d7c1e948475",
  "1bb420bc39246b",
  "1bcda6eb8c6d49",
  "05a1c3f90d13ae",
  "14b1030dab803f",
  "1da5a355d674a3",
  "0b0c1cd7f52d6e",
  "0bc2adcf0ee6a7",
  "0c6679d123637b",
  "1017c254c9f98e",
  "0c42a5d000f468",
  "16479d6ec77f7e",
  "07c68014695c72",
  "104817ac0beaac",
  "0d9ddc69be97b5",
  "16e0222078e084",
  "1942b670719a8c",
  "13a10c1df06a49",
  "170ca9f6038cf4",
  "03672f62247eab",
  "0bbe0ea2ea009a",
  "077a5011d76191",
  "0c1ef56649ee4c",
  "1fe05ef4dd3971",
  "1cb4744223919d",
  "0985de8e5b908e",
  "1d5a49d9e6d7b6",
  "16f016381d8c7e",
  "09d97e94426568",
  "1ee2d189d52e80",
  "08f1126df556d5",
  "1c87f92abbc471",
  "0b1397ae2d32b9",
  "0c8374f766e086",
  "02ee020dcb665d",
  "1b5f2139528868",
  "04d448fd8a17db",
  "076aae9e9c25cd",
  "00c249bc9d20ba",
  "11433b2467fd27",
  "1b6bbdf0d830a5",
  "1506fec046bb4f",
  "0709ca5caba107",
  "08608e47029a46",
  "0fc2989c320a22",
  "1203c212187b9a",
  "0511d4a1692a3f",
  "0da8f6eeda22ac",
  "1bd597efba303c",
  "1b588f57d4daf1",
  "087c28cc5a6671",
  "0162882243de8b",
  "0a0ed41c32f1c4",
  "0fafa981e88f6e",
  "013e425454dd4c",
  "0d611486dce3f3",
  "10701ef597217a",
  "1e39e019bd6c6f",
  "1884b6fd009a7f",
  "0a80f1a09d8308",
  "03e1a7ec67b6a5",
  "117d10d3a4b08e",
  "07019f6ce38450",
  "0667fb922c3894",
  "1e7ad06e0ecf8b",
  "0ded02598b2ca5",
  "08ff510e082aab",
  "048a115a4595f5",
  "1f27a3c39215f5",
  "0e0da6c9ee556a",
  "1e02292be7e496",
  "00f1d4567981cd",
  "09befc19a8d9d6",
  "075a97af8365e0",
  "0e2ccf25b35e30",
  "02348699e21132",
  "1c377efcf9a1a5",
  "046bf9fd1ff126",
  "03aac2f191168c",
  "0050cb71acace7",
  "0b22519b830dac",
  "09b151b510065a",
  "0b8712fdc90b36",
  "1711b0f9f32950",
  "0acf00d4341ceb",
  "01e6fea3c0cf07",
  "1dd69152affaa6",
  "0797a94bdd37c0",
  "0ce4e87b268d8f",
  "1664b25e75d22b",
  "00ea871339aefb",
  "0964fa43b3ad80",
  "1e43a3e16c54de",
  "1631d44e29be8f",
  "103c9004c9afee",
  "05d925f7d56b0f",
  "150898c71a1a97",
  "10dc4cc3692398",
  "0ef9d0930f6f08",
  "082f4f13363062",
  "1634f578f094e5",
  "19c94adc45f7b1",
  "0925e0285b4b0e",
  "186dc1527db83e",
  "039fce785abd9a",
  "133ca2f9af4b7e",
  "165cd03d68a49b",
  "02faf5f490475a",
  "1ab95e1704869c",
  "006827761e7641",
  "0f9f8d2f1cb9bd",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "02b5d35bbdc092",
  "10cc0207f60151",
  "05061d703d2e67",
  "1cac4adc38796d",
  "0bd5714f18016b",
  "0828648eea6c7c",
  "1be1e97716d45a",
  "00c4fbe3fb1ebf",
  "187cfead1e7d99",
  "1c1e6bf58eb246",
  "0618a50e1ad39c",
  "119a9074ce9922",
  "19713455b3b59f",
  "0e5e8cedf9788d",
  "167997fe3f05f3",
  "0434226ea55064",
  "0208e80ce6e2ac",
  "1b6c090966605c",
  "1f4561912eb198",
  "1d754ce959caed",
  "0913f954a03df2",
  "114fba02bd8094",
  "075552b8509654",
  "1ab9128d367901",
  "17627475be6de3",
  "09280db555df54",
  "16081f079ebd4d",
  "1bf6146fe3e25a",
  "08652ca17d48ca",
  "1a1e1a87ba2705",
  "1ef3179ea1c805",
  "140cbd8ab2f281",
  "127f15db722d42",
  "16fd1c8ca3264d",
  "1317eb1b41fc70",
  "0f978cc4072454",
  "06cdbfcc5ca5ec",
  "0a9f7b5203d0bf",
  "09b21ca2c68621",
  "0ad660b762db0d",
  "11f1c039d7e5ff",
  "18f782ab2825f7",
  "1b950a86192ba4",
  "14f11b9bfff368",
  "1ca65b29f0596e",
  "15e5e9c3f2d771",
  "0436046957a9f0",
  "06b8eed592a885",
  "0642ff8e61c9b7",
  "1ba04d5c8902cb",
  "186dfe768b964b",
  "057685754a6a94",
  "12a5179602715c",
  "0a8166ef9de333",
  "0e5501cb17b94e",
  "068e19294c8731",
  "07e2fad091d1ea",
  "1cd78d7ef33725",
  "04792aab724ee1",
  "0d7105f173c97f",
  "0748d9ee86d812",
  "07349ed86d5e73",
  "0d38411bc5fdcb",
  "199a39e084b81c",
  "1f09dd30b55261",
  "0434df8563b998",
  "1301339f0563cf",
  "1bf8cfdd12f270",
  "142649535e0a6c",
  "0781a16ce6667d",
  "0d9df17b75a093",
  "13053cd8705917",
  "169c332f3c00db",
  "104424253e992e",
  "1039d2acb1dcbb",
  "12dbc6166aceca",
  "064a1201b6047b",
  "0edd890fa6be68",
  "0a7f1ddcb48c05",
  "19b1a53e967389",
  "1a16ec3c17b265",
  "01ab8f852dfd1f",
  "194790d3024f00",
  "164a70ccd14c14",
  "073afd2c621564",
  "17ed7728d9970a",
  "154a720b808935",
  "118ba2b2c15688",
  "0c29a3bc26fc89",
  "0089aca7933c92",
  "09620342a1ca8f",
  "1bcda6eb8c6d49",
  "13d311adf9bf0b",
  "14b1030dab803f",
  "1da5a355d674a3",
  "0b0c1cd7f52d6e",
  "0bc2adcf0ee6a7",
  "0f416de580e023",
  "1017c254c9f98e",
  "1db233ba555e11",
  "0e9f6ad5711a42",
  "1e21de17c8f354",
  "104817ac0beaac",
  "0d9ddc69be97b5",
  "15274cd88f7bd7",
  "1942b670719a8c",
  "0b8a240084f083",
  "1e709729b913dd",
  "03b527533dcb29",
  "0bbe0ea2ea009a",
  "077a5011d76191",
  "0c1ef56649ee4c",
  "1fe05ef4dd3971",
  "0bb29a59708f8a",
  "0161cb2c398f09",
  "0240990101c420",
  "0f3aecf08253a3",
  "09d97e94426568",
  "05dfa0b8427faf",
  "18fd4a54245bed",
  "1c87f92abbc471",
  "19da1d30063990",
  "0c8374f766e086",
  "1f59b4aefd769f",
  "03ec90a9212271",
  "1e887da4224cb4",
  "1765e189912ea7",
  "1e91165a54f9ef",
  "11433b2467fd27",
  "1b6bbdf0d830a5",
  "101a9e57186f1f",
  "174b0edd221ab3",
  "10550fd3dc7813",
  "0fc2989c320a22",
  "15d434d4788c36",
  "0511d4a1692a3f",
  "0180c6eaa79b9b",
  "0ef7f0cfd9875d",
  "1b588f57d4daf1",
  "087c28cc5a6671",
  "0162882243de8b",
  "0249dc93e04195",
  "0fafa981e88f6e",
  "013e425454dd4c",
  "0f41d30738589f",
  "1d872163db074d",
  "1e39e019bd6c6f",
  "01e497069910bc",
  "1c78be691b2b32",
  "0efe709191bd99",
  "1aefeddc0bb7ab",
  "18b8e62690031f",
  "122aa7603e105f",
  "1056c90127ce6f",
  "0ded02598b2ca5",
  "0f86733aa5d8bc",
  "0bf945de55fce5",
  "1f27a3c39215f5",
  "0e0da6c9ee556a",
  "1e02292be7e496",
  "16521fe8e7fcf4",
  "01da755978edb7",
  "075a97af8365e0",
  "1c693992e04e99",
  "02348699e21132",
  "1c8289a71bf515",
  "046bf9fd1ff126",
  "0394b3176ac297",
  "0490b6668024ce",
  "06ab8f24526c33",
  "09b151b510065a",
  "09e6da16659e9d",
  "069f82602525e9",
  "1c4bdf33fd03f7",
  "1c663fb07a45f9",
  "1402dc283ad975",
  "0244f4217fba47",
  "0ce4e87b268d8f",
  "1664b25e75d22b",
  "00ea871339aefb",
  "0d65e67a10ee86",
  "1e43a3e16c54de",
  "1631d44e29be8f",
  "01db39719839a6",
  "067089fb37e038",
  "150898c71a1a97",
  "026ec8e6fd6afa",
  "0ef9d0930f6f08",
  "05a99542a5d88f",
  "114f36e1a273d3",
  "0120b2dd32442a",
  "13809285940c72",
  "1b17e448088c75",
  "1f99bee46e95b7",
  "08ccbf6b22f07b",
  "165cd03d68a49b",
  "1a72d4e1962cb5",
  "08c6c6e9442522",
  "07c4421ed916b5",
  "0e6cf1126fbf47",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "166129d48f621e",
  "08fed6206f8674",
  "16c999ac4eb16a",
  "0825d1017ffaf4",
  "0925c4b7dc6019",
  "1c32eaaf6e20e7",
  "03ee4d3622d409",
  "1916fb8cd384a2",
  "149adf0200d32d",
  "16ea581cc9a62d",
  "1c1d334014c97f",
  "060b613aac1cd5",
  "152b6d1f94b19e",
  "1c4a9ece6db18d",
  "1a15c7ea8a1577",
  "0ced9ee2cf64ee",
  "1f323152d83452",
  "16398191d52502",
  "073915fd057f84",
  "0934ff21694730",
  "114ada9fa996ee",
  "112b63918cebb5",
  "144d30c2492e55",
  "1ffb391e965609",
  "0a033ab6c8e7c3",
  "1c6b38e7a3ffbe",
  "06e8c51f9052c6",
  "145af73a8b9a83",
  "0191399e529bb6",
  "0eca1dc8f1e2ac",
  "1fea205db04ddd",
  "140f5607a187ae",
  "12f8cb48a6accc",
  "1aec091f23e44f",
  "17d3bfa40cf618",
  "16a58ea545e79f",
  "0b4a725d4962b9",
  "01a46d842c6e07",
  "079a59bf5b7288",
  "1d7c0210e44712",
  "01d5f89758f776",
  "092c4705324029",
  "0a172154e79c0d",
  "1ca8b055ad558d",
  "02b6376c394c7f",
  "04b10a356dae1a",
  "0617a5951dfdff",
  "0be110fec5f079",
  "1f99174da302c5",
  "0f9fe7f021be55",
  "17b697b675cf78",
  "1d0c1d0c888266",
  "1b02c991f5427b",
  "124e79e75115da",
  "06925e91aeae39",
  "16a38b5b70e194",
  "0c8d6258b407bf",
  "0acdbb309ba96f",
  "0a03a00498e1f1",
  "07cd90c4697ba6",
  "01fa079a0e21f5",
  "002c96be6954d3",
  "04e6133e8c43d3",
  "020775cfa2d6bb",
  "0e033a744ea594",
  "14d73434fa6963",
  "1b6ce1b73b7b0b",
  "14c672fc588cc8",
  "1bc5b8093eb250",
  "024ee49cd3baf6",
  "18dc1e5ba5df7b",
  "04aba296897a06",
  "14488fe1b3411e",
  "0e9155cf830035",
  "1b113c8b2eaf04",
  "18343ed446a4a5",
  "0c224bb70160cb",
  "1117f31de4d47f",
  "0feca17fa30d99",
  "10613e24e1e0ec",
  "1256dd6a2fbd17",
  "14f15776f7ed86",
  "193ecb9773f7f0",
  "1e65fa530bbfb5",
  "00cd921b961de5",
  "0d43078b6d5a6e",
  "1a8f0413abd7f7",
  "1449cacfa7167f",
  "12df9b4776f4e5",
  "162ad1812408d2",
  "0af64605a5a1df",
  "10a020d1491feb",
  "0845c48a8cb693",
  "0012bf4a92ccc7",
  "095168b8b650ba",
  "177bf7af466e58",
  "08418515de62a0",
  "07fd41785d809e",
  "090d199341cc42",
  "0ceef63f391459",
  "07d2cbeb78305a",
  "17b8a7624c3977",
  "16f90a60f12077",
  "051da0b7dbda37",
  "1ebf9b51b3e8dc",
  "05aed6f3ccd2b7",
  "1b5fafe0d115f7",
  "13d0c189384c46",
  "1e59c97028ee2e",
  "1b504b9cc87c0f",
  "172cdb1ea10e1e",
  "093f75171900c4",
  "0dd0c0c4caa65e",
  "143e7dc88b01ee",
  "1375956726fd75",
  "138549bc767891",
  "069efe32b6b5a7",
  "15ac1fe0c9e6cd",
  "1d9ac4539a6112",
  "174750c7313aad",
  "1c83ef33f5ac32",
  "078cb92a1eac0d",
  "1985d093f5288e",
  "15a4fe02472365",
  "19bae154c530e3",
  "176676b0f1757a",
  "19017e524a9156",
  "036896ebba086b",
  "19225502051e30",
  "117be0d10e07aa",
  "1539a075ebf81c",
  "12e167ae38e3af",
  "00d9c48a00ce22",
  "0e462af94191df",
  "047c0c780e03d2",
  "03515b2425da5f",
  "02b8a354202a04",
  "1ff20ed86184c0",
  "11133b5d395ceb",
  "03c07867c5cd48",
  "17be64d1966cb6",
  "15ded9bc3c90b0",
  "1067fda5e3ca8a",
  "10722391e25f0e",
  "06f82838cd412f",
  "1e339669e84ba1",
  "1bbedf074e65cb",
  "0a550820e4865e",
  "134b171e545395",
  "199edbb37c8a87",
  "1bdbe3a823c71e",
  "0e8c1827396c80",
  "0cd415e68d2a37",
  "0beba354ee976a",
  "098133a9c9ce59",
  "075a2c7f19768b",
  "131dbd6c789fc2",
  "1e859e937ac3d7",
  "1718e7920de784",
  "1bd1a280b1f683",
  "1046f3af7b56ba",
  "17b7b5c885889c",
  "1b51c29543556c",
  "1edcefa930a1d0",
  "1aa3bfc34b8164",
  "0cf34adbe1d2d2",
  "0d7813553f7cb7",
  "05e84382fd950d",
  "0382f3363b78fd",
  "0caf006ae1730a",
  "0e67b4a0459bb4",
  "040f50d8e78179",
  "11a9069c04bd05",
  "00c95cb5fca81a",
  "03b3c3ba2b0f11",
  "03b02e2d54fda5",
  "12c9db919d7edd",
  "1b402ec130eefa",
  "03f3c83c20be30",
  "08a29bd3f0f913",
  "07c0d47638ab16",
  "09526eb0ce44d0",
  "080b24a72f46b2",
  "13e20dab020d25",
  "0e53daab2ae83e",
  "0da3b920cbd847",
  "1c3d4b2e8143a2",
  "14b1d88ae38924",
  "06a77a3072dd7b",
  "1e9077bd41512f",
  "19854cfe13548b",
  "070680cdcc0740",
  "17cb31b3d6a441",
  "04f77bcfb51094",
  "10c6513c3e621a",
  "1892da3b8687dc",
  "12ed57e157751e",
  "115387a036d1ab",
  "08f5a6105dfce6",
  "01584170251b3a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "1d37eb367d89d8",
  "063567f130ee69",
  "17036b2866d31a",
  "08412c36107a50",
  "0c9a9068787403",
  "02fe7302f4cddd",
  "03ee4d3622d409",
  "0c68284c6b45a6",
  "149adf0200d32d",
  "0569da66fcc92e",
  "18447f7858aca4",
  "034e79ab687dd6",
  "0c00a1e87942e4",
  "01f31d4cb2398e",
  "049e427a83b24a",
  "1435bc8ce19665",
  "1f323152d83452",
  "0ed6bc3226f5de",
  "1872d07f741671",
  "15ca7a94bd1102",
  "093bc30918151e",
  "104bbb66301ed5",
  "02c16b2827bc15",
  "0dad7571d117ec",
  "0b8e98c89f4e3f",
  "188e2f10f90f18",
  "0a77fcf054053d",
  "05a8b3eacdf910",
  "0183e216da05c1",
  "10ac7ea4cc3272",
  "15a33af1b614d8",
  "1c6338e72041fb",
  "1bd8511420243d",
  "0fb1f5505c15f8",
  "1efca6b2f49050",
  "16a58ea545e79f",
  "0e543bf0da07a9",
  "072ce0fa4fd0ca",
  "1ebeff9febd34a",
  "1e756f94508ec7",
  "1556b895dfbf2d",
  "1087fcbd8894a7",
  "0c1832851ef86d",
  "1ae4c78a757c10",
  "03a70dd0cabe8b",
  "038bc8dd07c787",
  "1df165e6ec4c6d",
  "0be110fec5f079",
  "13caa83b4b9321",
  "1cb9e55f365287",
  "0579d6bd3ceb12",
  "1d0c1d0c888266",
  "0271069890e557",
  "124e79e75115da",
  "1c2a00ee245227",
  "106b2d1d488c55",
  "1512d5b65bd6fa",
  "0acdbb309ba96f",
  "09904b005488ed",
  "0c912595b8e753",
  "004ed27d195add",
  "10b3e9434bb7be",
  "09b24c4d383104",
  "020775cfa2d6bb",
  "0346361671ee44",
  "14d73434fa6963",
  "0cb6887ef29323",
  "0d2adaa37d3b83",
  "1d9d10cd7cd5d0",
  "11366026498a74",
  "04e3f0996a9bb8",
  "1e1fbd189a4cd4",
  "123a9c1c94ea06",
  "1700900252c6bd",
  "0defe3417aa511",
  "110041406674a8",
  "118c8216503d1a",
  "0058574ac7daa3",
  "14538d9a3a654d",
  "1a7afede3e7777",
  "0ab276542b2241",
  "14f15776f7ed86",
  "13f8e009c41a3e",
  "01a1d26f2d69f7",
  "0d45bd58930e23",
  "0f9723f4ffb869",
  "1761750e331a19",
  "1fb0fe73b833a4",
  "17be113a0464da",
  "09257bdfc49a6d",
  "0446f03e37f09b",
  "0f48e3cd9d470a",
  "0b8923002eb997",
  "16cd079a3d5dcb",
  "0958e51e412eff",
  "0aa83cdacafd07",
  "106bf950f097c1",
  "151dd279bd34c8",
  "090d199341cc42",
  "108377df54a7c1",
  "08f9c513440962",
  "01c101f467a38a",
  "16f90a60f12077",
  "00572cef97226a",
  "0c7e422a070d4d",
  "1d6a47fb09be10",
  "07bfc8a361ebfb",
  "17c068c96b30eb",
  "03c4436e9a3db4",
  "027b94279b0269",
  "1847c944a0a220",
  "093f75171900c4",
  "056caf763f735f",
  "17a30d41ac9df8",
  "1bf81bbdec5f20",
  "1caee04e752553",
  "0bfb5fd8105e81",
  "1a0d694ebb1837",
  "17436e8fc40d3c",
  "177d4eac3e9826",
  "1c83ef33f5ac32",
  "0df555cdd14745",
  "1985d093f5288e",
  "0d9e3e6d617482",
  "08ef3f040c8666",
  "15b0e3b58171e3",
  "1f0f67785ac166",
  "1c45b976a47848",
  "11568dd931bf06",
  "117be0d10e07aa",
  "0a171fef993da8",
  "1fba1df5be29bd",
  "0a1f9049b6252f",
  "035eabbdb99e3f",
  "1970f6f7c48a83",
  "03515b2425da5f",
  "195c9d4fcec030",
  "1ad0ace0af8852",
  "1e29c1bde6542f",
  "0721ecbbb50582",
  "17be64d1966cb6",
  "0c96fbe6d2fae7",
  "1067fda5e3ca8a",
  "0a4f7b01d70898",
  "09050521cf155c",
  "1d6a6142a33201",
  "1bbedf074e65cb",
  "04d29ec15ef793",
  "0c9366d275d6bc",
  "0eb266182ea7e4",
  "0fb9e34d460d3b",
  "1e3094051711ef",
  "095aeaeb95d762",
  "03466a95667d80",
  "00d8f0b3760091",
  "1110b30a330394",
  "0cc59754bffe2a",
  "12625426b4f156",
  "1f0cb789c939fe",
  "1a2b13c532de64",
  "1e28730247ea6e",
  "17840187416d64",
  "17d56ce5f09ddc",
  "1067cadf819d7f",
  "1aa3bfc34b8164",
  "198f6a146683ae",
  "0d7813553f7cb7",
  "0d3d81bd296cd8",
  "1500c6bc8a07c2",
  "18ce234bf0c666",
  "0e67b4a0459bb4",
  "143976bbb20df4",
  "0fccbabe8fbb71",
  "19632a2393276a",
  "084d8498db8702",
  "182db7f0cea642",
  "17fc81d5be3526",
  "1faee95a804bc3",
  "03f3c83c20be30",
  "1c073a9e897302",
  "151d5dfd4a8f8b",
  "09526eb0ce44d0",
  "080b24a72f46b2",
  "09c10dab7d89e0",
  "157e2167313806",
  "0f8d363ab7447b",
  "0a4a7ecba743fe",
  "09e7a582a7c7d0",
  "0a36a799ac1df6",
  "0e241eaf2ff400",
  "1a3907d86836f8",
  "1f343bf6a465d3",
  "173305ac48942f",
  "11ddb708cc3c24",
  "10f8476095c248",
  "1892da3b8687dc",
  "0de5fe68feb548",
  "094fa1ae2e2d7f",
  "15f24ae5027693",
  "03484171fdbfb2",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "166129d48f621e",
  "063567f130ee69",
  "16c999ac4eb16a",
  "0825d1017ffaf4",
  "0925c4b7dc6019",
  "1c32eaaf6e20e7",
  "03ee4d3622d409",
  "1916fb8cd384a2",
  "149adf0200d32d",
  "0569da66fcc92e",
  "18447f7858aca4",
  "060b613aac1cd5",
  "152b6d1f94b19e",
  "1c4a9ece6db18d",
  "1a15c7ea8a1577",
  "0ced9ee2cf64ee",
  "1f323152d83452",
  "16398191d52502",
  "073915fd057f84",
  "0934ff21694730",
  "114ada9fa996ee",
  "104bbb66301ed5",
  "144d30c2492e55",
  "0dad7571d117ec",
  "0a033ab6c8e7c3",
  "1c6b38e7a3ffbe",
  "06e8c51f9052c6",
  "145af73a8b9a83",
  "0191399e529bb6",
  "10ac7ea4cc3272",
  "1fea205db04ddd",
  "140f5607a187ae",
  "12f8cb48a6accc",
  "1aec091f23e44f",
  "17d3bfa40cf618",
  "16a58ea545e79f",
  "0b4a725d4962b9",
  "072ce0fa4fd0ca",
  "079a59bf5b7288",
  "1d7c0210e44712",
  "01d5f89758f776",
  "092c4705324029",
  "0a172154e79c0d",
  "1ca8b055ad558d",
  "03a70dd0cabe8b",
  "04b10a356dae1a",
  "0617a5951dfdff",
  "0be110fec5f079",
  "1f99174da302c5",
  "1cb9e55f365287",
  "17b697b675cf78",
  "1d0c1d0c888266",
  "1b02c991f5427b",
  "124e79e75115da",
  "06925e91aeae39",
  "16a38b5b70e194",
  "0c8d6258b407bf",
  "0acdbb309ba96f",
  "0a03a00498e1f1",
  "0c912595b8e753",
  "01fa079a0e21f5",
  "002c96be6954d3",
  "04e6133e8c43d3",
  "020775cfa2d6bb",
  "0e033a744ea594",
  "14d73434fa6963",
  "1b6ce1b73b7b0b",
  "14c672fc588cc8",
  "1d9d10cd7cd5d0",
  "024ee49cd3baf6",
  "18dc1e5ba5df7b",
  "04aba296897a06",
  "14488fe1b3411e",
  "0e9155cf830035",
  "1b113c8b2eaf04",
  "18343ed446a4a5",
  "0c224bb70160cb",
  "1117f31de4d47f",
  "14538d9a3a654d",
  "10613e24e1e0ec",
  "1256dd6a2fbd17",
  "14f15776f7ed86",
  "193ecb9773f7f0",
  "1e65fa530bbfb5",
  "00cd921b961de5",
  "0d43078b6d5a6e",
  "1a8f0413abd7f7",
  "1449cacfa7167f",
  "12df9b4776f4e5",
  "162ad1812408d2",
  "0af64605a5a1df",
  "0f48e3cd9d470a",
  "0845c48a8cb693",
  "16cd079a3d5dcb",
  "0958e51e412eff",
  "0aa83cdacafd07",
  "106bf950f097c1",
  "07fd41785d809e",
  "090d199341cc42",
  "0ceef63f391459",
  "07d2cbeb78305a",
  "17b8a7624c3977",
  "16f90a60f12077",
  "00572cef97226a",
  "1ebf9b51b3e8dc",
  "1d6a47fb09be10",
  "1b5fafe0d115f7",
  "13d0c189384c46",
  "1e59c97028ee2e",
  "027b94279b0269",
  "1847c944a0a220",
  "093f75171900c4",
  "056caf763f735f",
  "143e7dc88b01ee",
  "1375956726fd75",
  "138549bc767891",
  "069efe32b6b5a7",
  "1a0d694ebb1837",
  "1d9ac4539a6112",
  "174750c7313aad",
  "1c83ef33f5ac32",
  "078cb92a1eac0d",
  "1985d093f5288e",
  "15a4fe02472365",
  "19bae154c530e3",
  "176676b0f1757a",
  "19017e524a9156",
  "036896ebba086b",
  "11568dd931bf06",
  "117be0d10e07aa",
  "1539a075ebf81c",
  "12e167ae38e3af",
  "00d9c48a00ce22",
  "035eabbdb99e3f",
  "047c0c780e03d2",
  "03515b2425da5f",
  "02b8a354202a04",
  "1ff20ed86184c0",
  "1e29c1bde6542f",
  "0721ecbbb50582",
  "17be64d1966cb6",
  "15ded9bc3c90b0",
  "1067fda5e3ca8a",
  "0a4f7b01d70898",
  "06f82838cd412f",
  "1e339669e84ba1",
  "1bbedf074e65cb",
  "0a550820e4865e",
  "134b171e545395",
  "199edbb37c8a87",
  "1bdbe3a823c71e",
  "0e8c1827396c80",
  "0cd415e68d2a37",
  "0beba354ee976a",
  "00d8f0b3760091",
  "075a2c7f19768b",
  "131dbd6c789fc2",
  "12625426b4f156",
  "1f0cb789c939fe",
  "1a2b13c532de64",
  "1046f3af7b56ba",
  "17b7b5c885889c",
  "17d56ce5f09ddc",
  "1edcefa930a1d0",
  "1aa3bfc34b8164",
  "0cf34adbe1d2d2",
  "0d7813553f7cb7",
  "05e84382fd950d",
  "0382f3363b78fd",
  "0caf006ae1730a",
  "0e67b4a0459bb4",
  "040f50d8e78179",
  "11a9069c04bd05",
  "00c95cb5fca81a",
  "03b3c3ba2b0f11",
  "03b02e2d54fda5",
  "12c9db919d7edd",
  "1faee95a804bc3",
  "03f3c83c20be30",
  "1c073a9e897302",
  "07c0d47638ab16",
  "09526eb0ce44d0",
  "080b24a72f46b2",
  "13e20dab020d25",
  "0e53daab2ae83e",
  "0f8d363ab7447b",
  "1c3d4b2e8143a2",
  "09e7a582a7c7d0",
  "06a77a3072dd7b",
  "1e9077bd41512f",
  "19854cfe13548b",
  "070680cdcc0740",
  "17cb31b3d6a441",
  "04f77bcfb51094",
  "10c6513c3e621a",
  "1892da3b8687dc",
  "12ed57e157751e",
  "115387a036d1ab",
  "08f5a6105dfce6",
  "01584170251b3a",
]
`;
